new 4x4 sudoku, global methods of resolution